--- a/exercicios/ex016/cor03.html
+++ b/exercicios/ex016/cor03.html
@@ -9,14 +9,15 @@
 </head>
 <body>
     <main>
-        <H1>Site de Exemplo</H1>
-        <h2>Titulo 1</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo odio, soluta doloremque et sint, quaerat eveniet, quibusdam alias quas fugiat perspiciatis. Nulla numquam nam sint dicta iste amet ea iusto.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus libero magni nostrum sint voluptatum aliquid rem doloremque recusandae dolorem, temporibus eos totam? Dolor ducimus voluptatem neque vero cupiditate? Saepe, cumque!</p>
-        <h2>Titulo 2</h2>
+        <H1>Lilihans Moda Fashion</H1>
+        <h2>Outono inverno 2022: tendências e cores para você se inspirar</h2>
+        <p>O inverno sempre foi sinônimo de elegância, não é mesmo? Os clássicos trench coat ou sobretudos, as jaquetas, as botas e as peças de couro garantem um look requintado e que valoriza a presença da mulher seja nos momentos mais informais, seja no dia a dia do trabalho ou mesmo naquela balada de fim de semana.</p>.
+
+        <p>Na moda outono inverno 2022 não será diferente. Os clássicos nunca deixam de estar em alta e não podem faltar no seu guarda-roupa. A aposta será as combinações dessas peças tradicionais com blusas, vestidos, saias e calças. É aí que você vai dar um toque pessoal ao seu look e arrasar por onde passar. Quer algumas inspirações? Então é só seguir com a leitura.</p>
+        <h2>Meia Estação</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui, velit sit necessitatibus expedita laboriosam blanditiis explicabo voluptatem quisquam earum reprehenderit maiores eos cum aperiam dolor, ut facilis consequatur recusandae repellendus.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id iste officia sint sapiente illum repudiandae quibusdam impedit quod atque incidunt! Mollitia consequuntur fugiat earum porro nam nesciunt numquam molestiae excepturi.</p>
-        <h2>Titulo 3</h2>
+        <h2>Primavera Verão</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi repellat iste fugit alias? Impedit corrupti hic dolor nam modi accusamus quos molestiae ipsam ut corporis. Alias sed dolore error est.</p>
 
     </main>
