--- a/exercicios/ex012/index.html
+++ b/exercicios/ex012/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/pmc favi.png" type="image/x-icon">
-    <title>Criação de Paulo Marcos da Cruz</title>
+
+    <title>Criação de Paulo Marcos da Cruz</title>       
+   
 </head>
 <body>
     <h1>Inserindo vídeos hospedados localmente</h1>
     <p>Este video está hospedado no meu próprio servidor.</p>
-    <video src="midia/Meu-Video.m4v" width="560" height="420" controls autoplay loop></video>
-    <video src="midia/Meu-Video.webm.webm" width="560" controls autoplay loop>
+    <video src="midia/Meu-Video.m4v" width="560" height="315" controls autoplay loop></video>
+    
+    <video src="midia/Meu-Video.webm.webm" width="560" height="315" controls autoplay loop>
         <source src="midia/Meu-Video.m4v.m4v" type="video/mp4">
         <source src="midia/meu-video.wmv.wmv" type="video/wmv">
         <source src="midia/meu-video3.MPG" type="video/mpg">
